--- a/inicio.html
+++ b/inicio.html
@@ -264,6 +264,68 @@
             <div class="toast-body" id="toast-msg-body"></div>
         </div>
     </div>
+    <div class="modal fade" id="modalPasarelaPago" data-bs-backdrop="static" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content" style="background: #050a14; border: 2px solid #00ffaa; box-shadow: 0 0 40px rgba(0, 255, 170, 0.2);">
+                <div class="modal-header" style="border-bottom: 1px solid #00ffaa;">
+                    <h5 class="modal-title pixel-font text-white" style="font-size: 0.8rem;">
+                        > SECURE_CHECKOUT
+                    </h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                </div>
+                
+                <div class="modal-body p-4">
+                    <div class="d-flex justify-content-between mb-4 text-white pixel-font" style="font-size: 0.7rem; color: #a6c1ff;">
+                        <span>TOTAL A PAGAR:</span>
+                        <span id="checkout-total-display" style="color: #00ffaa; font-size: 1rem;">$0.00</span>
+                    </div>
+
+                    <form id="payment-form">
+                        <div class="mb-4">
+                            <label class="form-label text-white pixel-font" style="font-size: 0.6rem; color:#00ffaa !important;">
+                                > CORREO PARA ENVÍO (LINKS)
+                            </label>
+                            <input type="email" id="input-email-checkout" class="form-control" placeholder="usuario@correo.com" required>
+                        </div>
+
+                        <div class="p-3 mb-3" style="background: rgba(255,255,255,0.05); border-radius: 10px; border: 1px solid #4a76fd;">
+                            <div class="mb-3">
+                                <label class="form-label text-white pixel-font" style="font-size: 0.6rem;">NUMERO DE TARJETA</label>
+                                <div class="input-group">
+                                    <span class="input-group-text bg-transparent border-0 text-white"><i class="bi bi-credit-card"></i></span>
+                                    <input type="text" class="form-control border-0 bg-transparent text-white" placeholder="0000 0000 0000 0000" maxlength="19" required>
+                                </div>
+                                <hr style="border-color: #4a76fd; margin: 0;">
+                            </div>
+
+                            <div class="row">
+                                <div class="col-6">
+                                    <label class="form-label text-white pixel-font" style="font-size: 0.6rem;">EXPIRACIÓN</label>
+                                    <input type="text" class="form-control bg-transparent border-0 text-white" placeholder="MM/YY" maxlength="5" required>
+                                </div>
+                                <div class="col-6" style="border-left: 1px solid #4a76fd;">
+                                    <label class="form-label text-white pixel-font" style="font-size: 0.6rem;">CVC</label>
+                                    <input type="password" class="form-control bg-transparent border-0 text-white" placeholder="123" maxlength="3" required>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label text-white pixel-font" style="font-size: 0.6rem;">TITULAR DE LA TARJETA</label>
+                            <input type="text" class="form-control" placeholder="NOMBRE APELLIDO" required style="text-transform: uppercase;">
+                        </div>
+                    </form>
+                </div>
+
+                <div class="modal-footer justify-content-center" style="border-top: 1px solid #00ffaa;">
+                    <button type="button" class="btn-cyber-chrome w-100 text-center" onclick="confirmarPagoFinal()">
+                        <span class="chrome-text" id="btn-pay-text" style="color: #0a1a3a;">[ PAGAR AHORA ]</span>
+                        <div class="chrome-glare"></div>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="modal fade" id="modalCompraExitosa" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content"> <div class="modal-header">
