--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nostalgy.Core - Nosotros</title>
+    <title>Nosotros</title>
     <link rel="manifest" href="manifest.webmanifest">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -251,4 +251,5 @@
         });
     </script>
 </body>
+
 </html>
