--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NOSTALGY.CORE</title>
+    <title>Nostalgy.Core</title>
     <link rel="manifest" href="manifest.webmanifest">
     
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -431,5 +431,6 @@
     </script>
 </body>
 </html>
+
 
 
