--- a/inicio.html
+++ b/inicio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nostalgy.Core</title>
+    <title>Inicio</title>
     <link rel="manifest" href="manifest.webmanifest">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -436,3 +436,4 @@
     <script type="module" src="scripts/productos.js"></script>
 </body>
 </html>
+
