--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Admin Nostalgy.Core</title>
+  <title>Admin</title>
   <link rel="manifest" href="manifest.webmanifest">
   
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -394,6 +394,7 @@
 <script src="scripts/pwa.js"></script>
 </body>
 </html>
+
 
 
 
