--- a/inicio.html
+++ b/inicio.html
@@ -36,7 +36,7 @@
                     <div class="window-controls">
                         <div class="win-btn">_</div>
                         <div class="win-btn">□</div>
-                        <div class="win-btn close-x">X</div>
+                        <div class="win-btn close-x" href:"index.html">X</div>
                     </div>
                 </div>
                 <div class="glass-nav-body">
@@ -436,4 +436,5 @@
     <script type="module" src="scripts/productos.js"></script>
 </body>
 </html>
+
 
