--- a/nosotros.html
+++ b/nosotros.html
@@ -37,6 +37,8 @@
             <div class="glass overflow-hidden" style="border: 1px solid rgba(255,255,255,0.2);">
                 <div class="blue-strip-bar">
                     <div class="window-controls">
+                        <div class="win-btn">_</div>
+                        <div class="win-btn">□</div>
                         <div class="win-btn close-x" onclick="window.location.href='inicio.html'">X</div>
                     </div>
                 </div>
@@ -253,3 +255,4 @@
 </body>
 
 </html>
+
