--- a/index.html
+++ b/index.html
@@ -337,13 +337,13 @@
         </div>
         <div id="login-overlay" class="d-none">
             <div class="login-box">
-                <p class="blink">> ENTER_PASSWORD:</p>
+                <p class="blink">> INGRESAR_CONTRASEÑA:</p>
                 <input type="password" id="admin-pass-input" placeholder="******" maxlength="10">
                 <div class="login-actions">
-                    <button id="btn-cancel-login" class="btn-retro-small">CANCEL</button>
-                    <button id="btn-confirm-login" class="btn-retro-small action">ACCESS</button>
+                    <button id="btn-cancel-login" class="btn-retro-small">CANCELAR</button>
+                    <button id="btn-confirm-login" class="btn-retro-small action">ACCEDER</button>
                 </div>
-                <p id="login-error" class="text-danger mt-2 d-none" style="font-size: 0.6rem;">> ACCESS_DENIED</p>
+                <p id="login-error" class="text-danger mt-2 d-none" style="font-size: 0.6rem;">> ACCESO_DENEGADO</p>
             </div>
         </div>
     </div>
@@ -431,6 +431,7 @@
     </script>
 </body>
 </html>
+
 
 
 
