--- a/inicio.html
+++ b/inicio.html
@@ -336,7 +336,7 @@
 
                 <div class="modal-footer justify-content-center" style="border-top: 1px solid #00ffaa;">
                     <button type="button" class="btn-cyber-chrome w-100 text-center" onclick="confirmarPagoFinal()">
-                        <span class="chrome-text" id="btn-pay-text" style="color: #0a1a3a;">PAGAR AHORA</span>
+                        <span class="chrome-text" id="btn-pay-text">PAGAR AHORA</span>
                         <div class="chrome-glare"></div>
                     </button>
                 </div>
@@ -365,7 +365,7 @@
                 </div>                
                 <div class="modal-footer justify-content-center">
                     <button type="button" class="btn-cyber-chrome w-100 text-center" data-bs-dismiss="modal">
-                        <span class="chrome-text" style="color: #0a1a3a;">FINALIZAR</span>
+                        <span class="chrome-text">FINALIZAR</span>
                         <div class="chrome-glare"></div>
                     </button>
                 </div>
@@ -448,6 +448,7 @@
     <script type="module" src="scripts/productos.js"></script>
 </body>
 </html>
+
 
 
 
