--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         </div>
         <div id="login-overlay" class="d-none">
             <div class="login-box">
-                <p class="blink">> INGRESAR_CONTRASEÑA:</p>
+                <p class="blink">> CONTRASEÑA:</p>
                 <input type="password" id="admin-pass-input" placeholder="******" maxlength="10">
                 <div class="login-actions">
                     <button id="btn-cancel-login" class="btn-retro-small">CANCELAR</button>
@@ -431,6 +431,7 @@
     </script>
 </body>
 </html>
+
 
 
 
