--- a/inicio.html
+++ b/inicio.html
@@ -69,7 +69,7 @@
                             <div class="collapse navbar-collapse" id="navbarNav">
                                 <ul class="navbar-nav ms-auto gap-3 gap-lg-4 text-start ps-2 align-items-center"> 
                                     <li class="nav-item"><a class="nav-link-retro fw-bold" href="#visor-inmersivo">Tienda</a></li>
-                                    <li class="nav-item"><a class="nav-link-retro fw-bold" href="#sobre-nosotros">Conócenos</a></li>
+                                    <li class="nav-item"><a class="nav-link-retro fw-bold" href="#sobre-nosotros">Conocenos</a></li>
                                     <li class="nav-item"><a class="nav-link-retro fw-bold" href="#contacto">Contacto</a></li>
                                 </ul>
                             </div>
@@ -448,6 +448,7 @@
     <script type="module" src="scripts/productos.js"></script>
 </body>
 </html>
+
 
 
 
