--- a/inicio.html
+++ b/inicio.html
@@ -181,11 +181,12 @@
                 <div class="col-12 col-md-7 text-white">
                     <h2 class="frutiger-title mb-4">NOSTALGY.CORE</h2>                    
                     <p class="frutiger-text mb-4">
-                        Somos el archivo digital definitivo. Un puente entre la estética del pasado y la tecnología del futuro. 
-                        En Nostalgy.Core, no solo vendemos activos; preservamos la esencia de una era donde el internet era un lugar para soñar.
+                        En una era donde todo es minimalista y simple, Nostalgy.Core nace para rescatar el alma del internet de los 2000. 
+                        Desde la estética Frutiger Aero hasta el caos creativo de la Old Web, 
+                        creamos experiencias híbridas que conectan tu nostalgia con el futuro.
                     </p>
                     <a href="nosotros.html" class="btn-gel">
-                        <span>MÁS INFORMACIÓN</span>
+                        <span>Conoce nuestra historia</span>
                     </a>
                 </div>
             </div>
@@ -448,6 +449,7 @@
     <script type="module" src="scripts/productos.js"></script>
 </body>
 </html>
+
 
 
 
