--- a/nosotros.html
+++ b/nosotros.html
@@ -67,9 +67,8 @@
                 </div>
                 <div class="col-12 col-md-7 text-white">
                     <h1 class="title-y2k display-4 mb-4" style="line-height: 1.4;">
-                        SOMOS EL<br>ARCHIVO<br><span style="color: #fff; text-shadow: none; font-family: 'Fredoka';">DIGITAL</span>
+                        Rescatando<br>la Nostalgia<br><span style="color: #fff; text-shadow: none; font-family: 'Fredoka';">que te define</span>
                     </h1>
-                    
                     <p class="frutiger-text">
                         <strong>Nostalgy.Core</strong> nació de la fascinación por la era dorada de internet. Nos dedicamos a recopilar, restaurar y crear activos digitales para quienes buscan esa chispa de nostalgia auténtica.
                     </p>
@@ -255,4 +254,5 @@
 </body>
 
 </html>
+
 
