--- a/nosotros.html
+++ b/nosotros.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-12 col-md-7 text-white">
                     <h1 class="title-y2k display-4 mb-4" style="line-height: 1.4;">
-                        Rescatando<br>la Nostalgia<br><span style="color: #fff; text-shadow: none; font-family: 'Fredoka';">que te define</span>
+                        TU NOSTALGIA<br>NUESTRA INSPIRACION
                     </h1>
                     <p class="frutiger-text">
                         <strong>Nostalgy.Core</strong> nació de la fascinación por la era dorada de internet. Nos dedicamos a recopilar, restaurar y crear activos digitales para quienes buscan esa chispa de nostalgia auténtica.
@@ -254,5 +254,6 @@
 </body>
 
 </html>
+
 
 
