--- a/nosotros.html
+++ b/nosotros.html
@@ -70,7 +70,10 @@
                         TU NOSTALGIA<br>NUESTRA INSPIRACION
                     </h1>
                     <p class="frutiger-text">
-                        <strong>Nostalgy.Core</strong> nació de la fascinación por la era dorada de internet. Nos dedicamos a recopilar, restaurar y crear activos digitales para quienes buscan esa chispa de nostalgia auténtica.
+                        Vivimos en una era digital donde todo se ha vuelto plano, simple y minimalista. 
+                        En Nostalgy.Core, creemos que el internet solía ser un lugar más emocionante: un espacio para soñar, explorar y personalizar.
+                        Nacimos de la necesidad de rescatar esa magia. No solo replicamos la moda retro; creamos un puente entre la estética del pasado y la tecnología del futuro. 
+                        Somos el antídoto contra el diseño aburrido, trayendo de vuelta el caos creativo de la Old Web, el futurismo del Y2K y la serenidad del Frutiger Aero.
                     </p>
                 </div>
             </div>
@@ -254,6 +257,7 @@
 </body>
 
 </html>
+
 
 
 
