--- a/nosotros.html
+++ b/nosotros.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-12 col-md-7 text-white">
                     <h1 class="title-y2k display-4 mb-4" style="line-height: 1.4;">
-                        TU NOSTALGIA<br>NUESTRA INSPIRACION
+                        NOSTALGY.CORE
                     </h1>
                     <p class="frutiger-text">
                         Vivimos en una era digital donde todo se ha vuelto plano, simple y minimalista. 
@@ -257,6 +257,7 @@
 </body>
 
 </html>
+
 
 
 
