--- a/nosotros.html
+++ b/nosotros.html
@@ -72,8 +72,8 @@
                     <p class="frutiger-text">
                         Vivimos en una era digital donde todo se ha vuelto plano, simple y minimalista. 
                         En Nostalgy.Core, creemos que el internet solía ser un lugar más emocionante: un espacio para soñar, explorar y personalizar.
-                        Nacimos de la necesidad de rescatar esa magia. No solo replicamos la moda retro; creamos un puente entre la estética del pasado y la tecnología del futuro. 
-                        Somos el antídoto contra el diseño aburrido, trayendo de vuelta el caos creativo de la Old Web, el futurismo del Y2K y la serenidad del Frutiger Aero.
+                        Nacimos de la necesidad de rescatar esa magia. No solo replicamos la moda retro, creamos un puente entre la estética del pasado y la tecnología del futuro. 
+                        Somos el antídoto contra el diseño aburrido.
                     </p>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                         </div>
                         <h3 class="pixel-font text-white mb-3" style="font-size: 1rem; color: #00ffaa !important;">MISIÓN</h3>
                         <p class="cyber-body bg-transparent p-0">
-                            Democratizar la estética retro-futurista, proporcionando herramientas de alta calidad para que cualquier diseñador pueda recrear la magia del año 2000.
+                            Rescatar y comercializar la estética de los 2000's, ofreciendo experiencias inmersivas que unen el mundo físico y el digital para revivir la era dorada de internet.
                         </p>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                         </div>
                         <h3 class="pixel-font text-white mb-3" style="font-size: 1rem; color: #4a76fd !important;">VISIÓN</h3>
                         <p class="cyber-body bg-transparent p-0">
-                            Convertirnos en la biblioteca digital de referencia mundial para la preservación y evolución del arte digital de principios del milenio.
+                            Convertirnos en la biblioteca digital de referencia mundial, conectando la nostalgia de toda una generación con la tecnología del futuro.
                         </p>
                     </div>
                 </div>
@@ -121,10 +121,10 @@
                         <h3 class="pixel-font text-white mb-3" style="font-size: 1rem; color: #ff00ff !important;">VALORES</h3>
                         <div class="cyber-body bg-transparent p-0 d-flex justify-content-center">
                             <ul class="list-unstyled text-start" style="font-family: 'Sora'; font-size: 0.9rem;">
-                                <li class="mb-2"><span style="color:#ff00ff;">></span> Creatividad Pura</li>
-                                <li class="mb-2"><span style="color:#ff00ff;">></span> Nostalgia Real</li>
-                                <li class="mb-2"><span style="color:#ff00ff;">></span> Comunidad Open</li>
-                                <li class="mb-2"><span style="color:#ff00ff;">></span> Calidad Pixel-Perfect</li>
+                                <li class="mb-2"><span style="color:#ff00ff;">></span> Nostalgia</li>
+                                <li class="mb-2"><span style="color:#ff00ff;">></span> Fidelidad Estética</li>
+                                <li class="mb-2"><span style="color:#ff00ff;">></span> Comunidad</li>
+                                <li class="mb-2"><span style="color:#ff00ff;">></span> Innovación</li>
                             </ul>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
     <section class="py-5 position-relative" style="background: radial-gradient(circle at center, #102838 0%, #000000 100%); border-top: 1px solid rgba(0,255,170,0.2);">
         <div class="container position-relative z-2 text-center">
             
-            <h2 class="vr-main-title mb-5">CHOOSE YOUR PLAYER</h2>
+            <h2 class="vr-main-title mb-5">EQUIPO DE TRABAJO</h2>
 
             <div class="row justify-content-center g-4">
                 
@@ -145,7 +145,7 @@
                         <div class="style-circle-btn mb-3" style="border-color: #00ffaa;">
                             <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Alex" alt="Alex">
                         </div>
-                        <h4 class="pixel-font text-white" style="font-size: 0.8rem; color: #00ffaa !important;">ALEX</h4>
+                        <h4 class="pixel-font text-white" style="font-size: 0.8rem; color: #00ffaa !important;">ALAN</h4>
                         <span class="badge bg-transparent border border-success text-success pixel-font">LÍDER</span>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
                         <div class="style-circle-btn mb-3" style="border-color: #ff00ff;">
                             <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Sarah" alt="Sarah">
                         </div>
-                        <h4 class="pixel-font text-white" style="font-size: 0.8rem; color: #ff00ff !important;">SARAH</h4>
+                        <h4 class="pixel-font text-white" style="font-size: 0.8rem; color: #ff00ff !important;">KARIME</h4>
                         <span class="badge bg-transparent border border-danger text-danger pixel-font">DISEÑO</span>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
                         <div class="style-circle-btn mb-3" style="border-color: #4a76fd;">
                             <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Mike" alt="Mike">
                         </div>
-                        <h4 class="pixel-font text-white" style="font-size: 0.8rem; color: #4a76fd !important;">MIKE</h4>
+                        <h4 class="pixel-font text-white" style="font-size: 0.8rem; color: #4a76fd !important;">CARLOS</h4>
                         <span class="badge bg-transparent border border-primary text-primary pixel-font">CÓDIGO</span>
                     </div>
                 </div>
@@ -175,7 +175,7 @@
                         <div class="style-circle-btn mb-3" style="border-color: #ffff00;">
                             <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Zoe" alt="Zoe">
                         </div>
-                        <h4 class="pixel-font text-white" style="font-size: 0.8rem; color: #ffff00 !important;">ZOE</h4>
+                        <h4 class="pixel-font text-white" style="font-size: 0.8rem; color: #ffff00 !important;">MARISOL</h4>
                         <span class="badge bg-transparent border border-warning text-warning pixel-font">REDES</span>
                     </div>
                 </div>
@@ -257,6 +257,7 @@
 </body>
 
 </html>
+
 
 
 
