--- a/nosotros.html
+++ b/nosotros.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="col-12 col-md-7 text-white">
                     <h1 class="title-y2k display-6 mb-4" style="line-height: 1.4;">
-                        NOSTALGY.CORE
+                        NOSTALGY<br>.CORE
                     </h1>
                     <p class="frutiger-text">
                         Vivimos en una era digital donde todo se ha vuelto plano, simple y minimalista. 
@@ -295,6 +295,7 @@
 </body>
 
 </html>
+
 
 
 
