--- a/nosotros.html
+++ b/nosotros.html
@@ -181,7 +181,7 @@
                 <div class="col-6 col-md-3">
                     <div class="d-flex flex-column align-items-center style-item">
                         <div class="style-circle-btn mb-3" style="border-color: #00ffaa;">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Alex" alt="Alex">
+                            <img src="recursos/alan.webp" alt="Alan">
                         </div>
                         <h4 class="pixel-font text-white" style="font-size: 0.8rem; color: #00ffaa !important;">ALAN</h4>
                         <span class="badge bg-transparent border border-success text-success pixel-font">LÍDER</span>
@@ -191,7 +191,7 @@
                 <div class="col-6 col-md-3">
                     <div class="d-flex flex-column align-items-center style-item">
                         <div class="style-circle-btn mb-3" style="border-color: #ff00ff;">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Sarah" alt="Sarah">
+                            <img src="recursos/karime.webp" alt="Karime">
                         </div>
                         <h4 class="pixel-font text-white" style="font-size: 0.8rem; color: #ff00ff !important;">KARIME</h4>
                         <span class="badge bg-transparent border border-danger text-danger pixel-font">DISEÑO</span>
@@ -201,7 +201,7 @@
                 <div class="col-6 col-md-3">
                     <div class="d-flex flex-column align-items-center style-item">
                         <div class="style-circle-btn mb-3" style="border-color: #4a76fd;">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Mike" alt="Mike">
+                            <img src="recursos/carlos.webp" alt="Carlos">
                         </div>
                         <h4 class="pixel-font text-white" style="font-size: 0.8rem; color: #4a76fd !important;">CARLOS</h4>
                         <span class="badge bg-transparent border border-primary text-primary pixel-font">CÓDIGO</span>
@@ -211,7 +211,7 @@
                 <div class="col-6 col-md-3">
                     <div class="d-flex flex-column align-items-center style-item">
                         <div class="style-circle-btn mb-3" style="border-color: #ffff00;">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Zoe" alt="Zoe">
+                            <img src="recursos/sol.webp" alt="Sol">
                         </div>
                         <h4 class="pixel-font text-white" style="font-size: 0.8rem; color: #ffff00 !important;">MARISOL</h4>
                         <span class="badge bg-transparent border border-warning text-warning pixel-font">REDES</span>
@@ -295,6 +295,7 @@
 </body>
 
 </html>
+
 
 
 
