--- a/nosotros.html
+++ b/nosotros.html
@@ -194,7 +194,7 @@
                             <img src="recursos/karime.webp" alt="Karime">
                         </div>
                         <h4 class="pixel-font text-white" style="font-size: 0.8rem; color: #ff00ff !important;">KARIME</h4>
-                        <span class="badge bg-transparent border border-danger text-danger pixel-font">DISEÑO</span>
+                        <span class="badge bg-transparent pixel-font" style="border: 1px solid #ff00ff; color: #ff00ff;">DISEÑO</span>
                     </div>
                 </div>
 
@@ -295,6 +295,7 @@
 </body>
 
 </html>
+
 
 
 
