--- a/inicio.html
+++ b/inicio.html
@@ -125,7 +125,7 @@
                             <h3 id="style-title" class="display-5 fw-bold mb-3" style="font-family: 'Sora'; text-transform: uppercase;">Estilo</h3>                            
                             <div class="d-flex gap-2 mb-3">
                                 <button class="filter-pill active" onclick="filtrarProductos('wallpaper')">Wallpapers</button>
-                                <button class="filter-pill" onclick="filtrarProductos('iconos')">Pack de Iconos</button>
+                                <button class="filter-pill" onclick="filtrarProductos('icon')">Pack de Iconos</button>
                             </div>
                         </div>
                         <div class="col-12 col-lg-9">
@@ -449,6 +449,7 @@
     <script type="module" src="scripts/productos.js"></script>
 </body>
 </html>
+
 
 
 
